# fake-telegrame

./: RENDER_DEPLOY.md  data.db  database.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  reset_db.py
templates/: admin.html  admin_login.html
