[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "bank-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.4",
    "jinja2>=3.1.6",
    "mangum>=0.17.0",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.32",
    "uvicorn[standard]>=0.40.0",
]
